--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -423,8 +423,8 @@
   },
   "noRoamingCollection": "Не вдалося почати блукання. Треки в колекції ще не проаналізовані.",
   "@noRoamingCollection": {},
-  "noRomaingTrack": "Не вдалося почати блукання. Цей трек ще не проаналізований.",
-  "@noRomaingTrack": {},
+  "noRoamingTrack": "Не вдалося почати блукання. Цей трек ще не проаналізований.",
+  "@noRoamingTrack": {},
   "noAnalysisScanning": "{baseMessage} Бібліотека сканується, тому аналіз не може бути виконаний.",
   "@noAnalysisScanning": {
     "placeholders": {
@@ -455,8 +455,8 @@
   "@scanLibrary": {
     "description": "Текст кнопки дії в модальному вікні, що ініціює сканування медіа-бібліотеки при натисканні."
   },
-  "analyseTracks": "Аналізувати треки",
-  "@analyseTracks": {
+  "analyzeTracks": "Аналізувати треки",
+  "@analyzeTracks": {
     "description": "Текст кнопки дії в модальному вікні, що ініціює аналіз всіх треків у медіа-бібліотеці при натисканні."
   },
   "scan": "Сканувати",
@@ -467,12 +467,12 @@
   "@scanning": {
     "description": "Текст кнопки у налаштуваннях, що вказує, що медіа-бібліотека зараз сканується."
   },
-  "analyse": "Аналізувати",
-  "@analyse": {
+  "analyze": "Аналізувати",
+  "@analyze": {
     "description": "Текст кнопки у налаштуваннях, що ініціює аналіз всіх треків у медіа-бібліотеці при натисканні."
   },
-  "analysing": "Аналіз",
-  "@analysing": {
+  "analyzing": "Аналіз",
+  "@analyzing": {
     "description": "Текст кнопки у налаштуваннях, що вказує, що медіа-бібліотека зараз аналізується."
   },
   "tryCreatingYourOwnCollection": "Спробуйте створити власну колекцію",
