--- a/lib/l10n/intl_zh_Hant_TW.arb
+++ b/lib/l10n/intl_zh_Hant_TW.arb
@@ -246,8 +246,8 @@
   "@liked": {},
   "noRoamingCollection": "無法開始漫遊。集合中的曲目尚未分析。",
   "@noRoamingCollection": {},
-  "noRomaingTrack": "無法開始漫遊。此曲目尚未分析。",
-  "@noRomaingTrack": {},
+  "noRoamingTrack": "無法開始漫遊。此曲目尚未分析。",
+  "@noRoamingTrack": {},
   "noAnalysisScanning": "{baseMessage} 資料庫正在掃描中，無法執行分析。",
   "@noAnalysisScanning": {
     "placeholders": {
@@ -272,16 +272,16 @@
   "@createPlaylist": {},
   "scanLibrary": "掃描資料庫",
   "@scanLibrary": {},
-  "analyseTracks": "分析曲目",
-  "@analyseTracks": {},
+  "analyzeTracks": "分析曲目",
+  "@analyzeTracks": {},
   "scan": "掃描",
   "@scan": {},
   "scanning": "掃描中",
   "@scanning": {},
-  "analyse": "分析",
-  "@analyse": {},
-  "analysing": "分析中",
-  "@analysing": {},
+  "analyze": "分析",
+  "@analyze": {},
+  "analyzing": "分析中",
+  "@analyzing": {},
   "tryCreatingYourOwnCollection": "嘗試建立自己的收藏",
   "@tryCreatingYourOwnCollection": {},
   "theseActionsMayHelp": "這些操作可能會有所幫助",
