--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -423,8 +423,8 @@
   },
   "noRoamingCollection": "Unable to start roaming. Tracks in the collection haven't been analyzed yet.",
   "@noRoamingCollection": {},
-  "noRomaingTrack": "Unable to start roaming. This track hasn't been analyzed yet.",
-  "@noRomaingTrack": {},
+  "noRoamingTrack": "Unable to start roaming. This track hasn't been analyzed yet.",
+  "@noRoamingTrack": {},
   "noAnalysisScanning": "{baseMessage} The library is being scanned, so analysis cannot be performed.",
   "@noAnalysisScanning": {
     "placeholders": {
@@ -455,8 +455,8 @@
   "@scanLibrary": {
     "description": "Action button text in the modal, initiating a media library scan when pressed."
   },
-  "analyseTracks": "Analyse Tracks",
-  "@analyseTracks": {
+  "analyzeTracks": "Analyze Tracks",
+  "@analyzeTracks": {
     "description": "Action button text in the modal, initiating analysis of all tracks in the media library when pressed."
   },
   "scan": "Scan",
@@ -467,12 +467,12 @@
   "@scanning": {
     "description": "Button prompt text in the settings interface, indicating the media library is currently being scanned."
   },
-  "analyse": "Analyse",
-  "@analyse": {
+  "analyze": "Analyze",
+  "@analyze": {
     "description": "Button prompt text in the settings interface, initiating analysis of all tracks in the media library when pressed."
   },
-  "analysing": "Analysing",
-  "@analysing": {
+  "analyzing": "Analysing",
+  "@analyzing": {
     "description": "Button prompt text in the settings interface, indicating the media library is currently being analyzed."
   },
   "tryCreatingYourOwnCollection": "Try creating your own collection",
@@ -860,5 +860,29 @@
   "laboratory": "Laboratory",
   "@laboratory": {
     "description": "The title of a link title"
+  },
+  "libraryMode": "Library Mode",
+  "@libraryMode": {
+    "description": "The title of a modal, which guides user to select where to store the database"
+  },
+  "libraryModeSubtitle": "Please select how you would like to store the media metadata for your Library:",
+  "@libraryModeSubtitle": {
+    "description": "The subtitle of a modal, which guides user to select where to store the database"
+  },
+  "portableMode": "Portable Mode",
+  "@portableMode": {
+    "description": "One candidate library mode for users"
+  },
+  "portableModeSubtitle": "Store the media index and Library in the same directory, making it easy to migrate metadata and analytical data.",
+  "@portableModeSubtitle": {
+    "description": "The subtitle of the candidate library mode for users"
+  },
+  "localMode": "Local Mode",
+  "@localMode": {
+    "description": "One candidate library mode for users"
+  },
+  "localModeSubtitle": "Store the media index in Rune's configuration directory. If your media directory is in a cloud drive, choose this mode.",
+  "@localModeSubtitle": {
+    "description": "The subtitle of the candidate library mode for users"
   }
 }
