--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -423,8 +423,8 @@
   },
   "noRoamingCollection": "漫奏を開始できません。選集内の曲がまだ解析されていません。",
   "@noRoamingCollection": {},
-  "noRomaingTrack": "漫奏を開始できません。この曲はまだ解析されていません。",
-  "@noRomaingTrack": {},
+  "noRoamingTrack": "漫奏を開始できません。この曲はまだ解析されていません。",
+  "@noRoamingTrack": {},
   "noAnalysisScanning": "{baseMessage} 資料集を検査中のため、解析は実行できません。",
   "@noAnalysisScanning": {
     "placeholders": {
@@ -455,8 +455,8 @@
   "@scanLibrary": {
     "description": "Action button text in the modal, initiating a media library scan when pressed."
   },
-  "analyseTracks": "曲を解析",
-  "@analyseTracks": {
+  "analyzeTracks": "曲を解析",
+  "@analyzeTracks": {
     "description": "Action button text in the modal, initiating analysis of all tracks in the media library when pressed."
   },
   "scan": "検査",
@@ -467,12 +467,12 @@
   "@scanning": {
     "description": "Button prompt text in the settings interface, indicating the media library is currently being scanned."
   },
-  "analyse": "解析",
-  "@analyse": {
+  "analyze": "解析",
+  "@analyze": {
     "description": "Button prompt text in the settings interface, initiating analysis of all tracks in the media library when pressed."
   },
-  "analysing": "解析中",
-  "@analysing": {
+  "analyzing": "解析中",
+  "@analyzing": {
     "description": "Button prompt text in the settings interface, indicating the media library is currently being analyzed."
   },
   "tryCreatingYourOwnCollection": "独自の選集を作成してみてください",
@@ -799,7 +799,7 @@
   },
   "back": "戻る",
   "@back": {
-    "description": "Tool tip for the top left icon of the Windows titlebar."
+    "description": "Tool tip for the top left icon of the Windows title bar."
   },
   "exportTracks": "書き出す",
   "@exportTracks": {
@@ -837,7 +837,7 @@
   "@evaluationModeContent2": {
     "description": "Content of the evaluation mode modal"
   },
-  "evaluationModeContent3": "この通知を 180 日間非表示にすることができます。その後、再度お知らせします。
+  "evaluationModeContent3": "この通知を 180 日間非表示にすることができます。その後、再度お知らせします。",
   "@evaluationModeContent3": {
     "description": "Content of the evaluation mode modal"
   },
@@ -853,7 +853,7 @@
   "@mysteriousModalTitle": {
     "description": "The title of a modal"
   },
-  "mysteriousModalContent": 何やら不思議な仕掛けを作動させたようです。部屋の構造が変化し、新たに探索できる場所が現れたようです。",
+  "mysteriousModalContent": "何やら不思議な仕掛けを作動させたようです。部屋の構造が変化し、新たに探索できる場所が現れたようです。",
   "@mysteriousModalContent": {
     "description": "The content of a modal"
   },
