--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -881,7 +881,7 @@
   "@localMode": {
     "description": "One candidate library mode for users"
   },
-  "localModeSubtitle": あなたの資料索引を Rune の設定保存先に保存します。",
+  "localModeSubtitle": "あなたの資料索引を Rune の設定保存先に保存します。",
   "@localModeSubtitle": {
     "description": "The subtitle of the candidate library mode for users"
   },
